name:           tdigest
version:        0
synopsis:       On-line accumulation of rank-based statistics such as quantiles and trimmed means
description:    A new data structure for accurate on-line accumulation of rank-based statistics such as quantiles and trimmed means.
                .
                See original paper: "Computing extremely accurate quantiles using t-digest" by Ted Dunning and Otmar Ertl
                for more details <https://github.com/tdunning/t-digest/blob/master/docs/t-digest-paper/histo.pdf>.
category:       Numeric
homepage:       https://github.com/futurice/haskell-tdigest#readme
bug-reports:    https://github.com/futurice/haskell-tdigest/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==7.8.4, GHC==7.10.3, GHC==8.0.1, GHC==8.0.2
build-type:     Custom
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/futurice/haskell-tdigest

custom-setup
  setup-depends:
    base          >=4.5 && <5,
    Cabal         >=1.14,
    cabal-doctest >=1 && <1.1

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base                >=4.7      && <4.10
    , base-compat         >=0.9.1    && <0.10
    , deepseq             >=1.3.0.2  && <1.5
    , binary              >=0.7.1.0  && <0.9
    , reducers            >=3.12.1   && <3.13
    , semigroups          >=0.18.2   && <0.19
    , vector              >=0.11     && <0.13
    , vector-algorithms   >=0.7.0.1  && <0.8
  exposed-modules:
      Data.TDigest
      Data.TDigest.Postprocess
      Data.TDigest.Internal.Tree
  default-language: Haskell2010
  other-extensions:
      DataKinds
      KindSignatures
      MultiParamTypeClasses
      ScopedTypeVariables

test-suite tdigest-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  ghc-options:      -Wall -threaded
  hs-source-dirs:   tests

  build-depends:
    base,
    tdigest,
    base-compat,
    deepseq,
    binary,
    semigroups,
    vector,
    vector-algorithms,
    tasty            >=0.11.0.4 && <0.12,
    tasty-quickcheck >=0.8.4    && <0.9

test-suite doctests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  ghc-options:      -Wall -threaded
  hs-source-dirs:   tests

  build-depends:
    base,
    bytes,
    directory      >=1.0,
    doctest        >=0.11.1 && <0.12,
    filepath       >=1.2

benchmark tdigest-simple
  type: exitcode-stdio-1.0
  main-is: Simple.hs
  hs-source-dirs:
      bench
  ghc-options: -Wall -threaded
  build-depends:
      base
    , tdigest
    , base-compat
    , deepseq
    , binary
    , semigroups
    , vector
    , vector-algorithms
    , Chart                >=1.8.1    && <1.9
    , Chart-diagrams       >=1.8.1    && <1.9
    , machines             >=0.6.1    && <0.7
    , parallel             >=3.2.0.6  && <3.3
    , mwc-random           >=0.13.4.0 && <0.14
    , statistics           >=0.13.3.0 && <0.14
    , time                 >=1.4.2    && <1.8
    , optparse-applicative >=0.12.1.0 && <0.14
  default-language: Haskell2010
