name:           tdigest-Chart
version:        0
x-revision:     2
synopsis:       Chart generation from tdigest
description:
  Chart generation from tdigest.
  .
  @
  ...
  @
category:       Numeric, Graphics
homepage:       https://github.com/futurice/haskell-tdigest#readme
bug-reports:    https://github.com/futurice/haskell-tdigest/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==7.8.4, GHC==7.10.3, GHC==8.0.1, GHC==8.0.2
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/futurice/haskell-tdigest

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base                >=4.7      && <4.10
    , base-compat         >=0.9.1    && <0.10
    , colour              >=2.3.3    && <2.4
    , semigroups          >=0.18.2   && <0.19
    , semigroupoids       >=5.1      && <5.3
    , tdigest             >=0.1      && <0.2
    , lens                >=4        && <4.16
    , Chart               >=1.8.1    && <1.9
  exposed-modules:
      Graphics.Rendering.Chart.Plot.TDigest
  default-language: Haskell2010

test-suite tdigest-chart-examples
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Examples.hs
  ghc-options:      -Wall -threaded
  hs-source-dirs:   example

  build-depends:
    base,
    base-compat,
    Chart,
    lens,
    tdigest,
    tdigest-Chart,
    vector,
    Chart-diagrams       >=1.8.1    && <1.9,
    mwc-random           >=0.13.4.0 && <0.14,
    statistics           >=0.13.3.0 && <0.15
