name:           tdigest-Chart
version:        0.2
synopsis:       Chart generation from tdigest
description:
  Chart generation from tdigest.
  .
  @
  ...
  @
category:       Numeric, Graphics
homepage:       https://github.com/futurice/haskell-tdigest#readme
bug-reports:    https://github.com/futurice/haskell-tdigest/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==7.8.4, GHC==7.10.3, GHC==8.0.1, GHC==8.0.2, GHC==8.2.2, GHC==8.4.1
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/futurice/haskell-tdigest

library
  hs-source-dirs:
      src
  ghc-options: -Wall

  -- GHC boot libraries
  build-depends:
      base                >=4.7      && <4.12

  if !impl(ghc >= 8.0)
    build-depends:
      semigroups          >=0.18.4   && <0.19

  -- other dependencies
  build-depends:
      base-compat         >=0.10.1   && <0.11
    , colour              >=2.3.3    && <2.4
    , semigroupoids       >=5.2.2    && <5.3
    , tdigest             >=0.2      && <0.3
    , lens                >=4.15.4   && <4.17
    , Chart               >=1.8.3    && <1.10

  exposed-modules:
      Graphics.Rendering.Chart.Plot.TDigest
  default-language: Haskell2010

test-suite tdigest-chart-examples
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Examples.hs
  ghc-options:      -Wall -threaded
  hs-source-dirs:   example

  build-depends:
    base,
    base-compat,
    Chart,
    lens,
    tdigest,
    tdigest-Chart,
    vector,
    Chart-diagrams       >=1.8.1    && <1.10,
    mwc-random           >=0.13.4.0 && <0.14,
    statistics           >=0.13.3.0 && <0.15
