cabal-version:      >=1.10
name:               tdigest-Chart
version:            0.2
x-revision:         2
synopsis:           Chart generation from tdigest
description:
  Chart generation from tdigest.
  .
  @
  ...
  @

category:           Numeric, Graphics
homepage:           https://github.com/futurice/haskell-tdigest#readme
bug-reports:        https://github.com/futurice/haskell-tdigest/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD3
license-file:       LICENSE
tested-with:
  GHC ==7.10.3
   || ==8.0.1
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.1

build-type:         Simple
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-tdigest

library
  hs-source-dirs:   src
  ghc-options:      -Wall

  -- GHC boot libraries
  build-depends:    base >=4.7 && <4.14

  if !impl(ghc >=8.0)
    build-depends: semigroups >=0.18.4 && <0.20

  -- other dependencies
  build-depends:
      base-compat    >=0.10.1 && <0.12
    , Chart          >=1.8.3  && <1.10
    , colour         >=2.3.3  && <2.4
    , lens           >=4.15.4 && <4.19
    , semigroupoids  >=5.2.2  && <5.4
    , tdigest        >=0.2    && <0.3

  exposed-modules:  Graphics.Rendering.Chart.Plot.TDigest
  default-language: Haskell2010

test-suite tdigest-chart-examples
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Examples.hs
  ghc-options:      -Wall -threaded
  hs-source-dirs:   example
  build-depends:
      base
    , base-compat
    , Chart
    , Chart-diagrams  >=1.8.1    && <1.10
    , lens
    , mwc-random      >=0.13.4.0 && <0.15
    , statistics      >=0.13.3.0 && <0.16
    , tdigest
    , tdigest-Chart
    , vector
