cabal-version: >=1.10
name:          tdigest-bench
version:       0
synopsis:      tdigest benchmark suite
description:   We use this as correctness tests too.
category:      Numeric Tests
homepage:      https://github.com/futurice/haskell-tdigest#readme
bug-reports:   https://github.com/futurice/haskell-tdigest/issues
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
license:       BSD3
license-file:  LICENSE
tested-with:
  GHC ==7.10.3
   || ==8.0.1
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.3
   || ==8.10.1

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-tdigest

executable tdigest-simple
  main-is:          Simple.hs
  hs-source-dirs:   src
  ghc-options:      -Wall -threaded
  build-depends:
      base                  >=4.7      && <4.15
    , base-compat
    , binary
    , Chart                 >=1.8.1    && <1.10
    , Chart-diagrams        >=1.8.1    && <1.10
    , deepseq
    , machines              >=0.6.1    && <0.8
    , mwc-random            >=0.13.4.0 && <0.15
    , optparse-applicative  >=0.12.1.0 && <0.16
    , parallel              >=3.2.0.6  && <3.3
    , reducers
    , semigroups
    , statistics            >=0.13.3.0 && <0.16
    , tdigest
    , tdigest-Chart
    , time                  >=1.4.2    && <1.10
    , vector
    , vector-algorithms

  default-language: Haskell2010
